Add basics of using MVVM with the Mvvm Toolkit

--- a/Mde.Mvvm.StudentRoulette/Mde.Mvvm.StudentRoulette.csproj
+++ b/Mde.Mvvm.StudentRoulette/Mde.Mvvm.StudentRoulette.csproj
@@ -49,6 +49,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.0" />
+	</ItemGroup>
+
+	<ItemGroup>
 	  <MauiXaml Update="Pages\StudentFormPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
