Add Presence converter

--- a/Mde.Mvvm.StudentRoulette/Mde.Mvvm.StudentRoulette.csproj
+++ b/Mde.Mvvm.StudentRoulette/Mde.Mvvm.StudentRoulette.csproj
@@ -56,6 +56,9 @@
 	  <MauiXaml Update="Pages\StudentFormPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Resources\Styles\Converters.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
