--- a/Mde.Mvvm.StudentRoulette/Mde.Mvvm.StudentRoulette.csproj
+++ b/Mde.Mvvm.StudentRoulette/Mde.Mvvm.StudentRoulette.csproj
@@ -32,10 +32,7 @@
 
 	<ItemGroup>
 		<!-- App Icon -->
-		<MauiIcon Include="Resources\AppIcon\appicon.svg" 
-				  Color="#ffffff"
-				  ForegroundScale="0.65"
-				  BaseSize="128,128"/>
+		<MauiIcon Include="Resources\AppIcon\appicon.svg" Color="#ffffff" ForegroundScale="0.65" BaseSize="128,128" />
 
 		<!-- Splash Screen -->
 		<MauiSplashScreen Include="Resources\Splash\splash.svg" Color="#ffffff" BaseSize="128,128" />
@@ -57,6 +54,9 @@
 
 	<ItemGroup>
 	  <MauiXaml Update="Pages\StudentFormPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Pages\StudentListPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Resources\Styles\Converters.xaml">
