Select random student

--- a/Mde.Mvvm.StudentRoulette/Mde.Mvvm.StudentRoulette.csproj
+++ b/Mde.Mvvm.StudentRoulette/Mde.Mvvm.StudentRoulette.csproj
@@ -52,6 +52,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <MauiXaml Update="Pages\RoulettePage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Pages\StudentFormPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
